import com.android.build.OutputFile

apply plugin: 'com.android.application'

android {
    namespace "io.github.muntashirakon.setedit"
    compileSdk 36

    defaultConfig {
        applicationId "io.github.muntashirakon.setedit"
        minSdk 24
        targetSdk 36
        versionCode 10
        versionName "3.1"
        resConfig "en"
    }

    signingConfigs {
        debug {
            storeFile file('dev_keystore.jks')
            storePassword 'kJCp!Bda#PBdN2RLK%yMK@hatq&69E'
            keyPassword 'kJCp!Bda#PBdN2RLK%yMK@hatq&69E'
            keyAlias 'key0'
        }
    }

    externalNativeBuild {
        cmake {
            path "CMakeLists.txt"
        }
    }

    splits {
        abi {
            enable false
            reset()
            include 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
            universalApk true
        }
    }

    def archPrefix = ['armeabi-v7a':4, 'arm64-v8a':2, 'x86':3, 'x86_64':1]

    android.applicationVariants.all { variant ->
        variant.outputs.each { output ->
            int abiVersionCode = archPrefix.get(output.getFilter(OutputFile.ABI), 0)
            output.versionCodeOverride = (abiVersionCode * 100000) + defaultConfig.versionCode
        }
    }

    buildTypes {
        release {
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
        debug {
            applicationIdSuffix '.debug'
            signingConfig signingConfigs.debug
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    testOptions {
        unitTests.all {
            jvmArgs '-Dnet.bytebuddy.experimental=true'
        }
    }
}

dependencies {
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.mockito:mockito-core:5.11.0'
    testImplementation 'org.robolectric:robolectric:4.11.1'

    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.google.android.material:material:1.11.0'
    implementation 'me.zhanghai.android.fastscroll:library:1.3.0'
    implementation 'com.github.topjohnwu.libsu:core:6.0.0'
    implementation 'dev.rikka.shizuku:api:13.1.5'
    implementation 'dev.rikka.shizuku:provider:13.1.5'
}
